@@ -1,1 +1,1 @@
-dependency.0=jsxe 00.03.16.00
+dependency.0=jsxe 00.03.99.00
